# OOP-LABS

lab_2/: CMakeLists.txt  main.cpp
lab_2/include/: binary.h
lab_2/src/: binary.cpp
lab_2/tests/: test_binary.cpp
lab_5/: CMakeLists.txt
lab_5/include/: singly_linked_list.h
lab_5/src/: singly_linked_list.cpp
